# atlas-packer

./: .gitmodules  CMakeLists.txt  CMakeSettings.json  README.md
dependencies/stb_image/: README.md
src/: Application.cpp  Application.h  AtlasPacker.cpp  AtlasPacker.h  FileDialog.cpp  FileDialog.h  ImageData.cpp  ImageData.h  MaxRects.cpp  MaxRects.h  Window.cpp  main.cpp
